--- a/WeatherForecast/Podfile
+++ b/WeatherForecast/Podfile
@@ -8,4 +8,7 @@ target 'WeatherForecast' do
     pod 'RealmSwift'
     pod 'Alamofire', '~> 4.7'
     pod 'ObjectMapper', '~> 3.1'
+
+    # Network
+    pod 'ReachabilitySwift'
 end
