--- a/WeatherForecast/Podfile
+++ b/WeatherForecast/Podfile
@@ -8,6 +8,7 @@ target 'WeatherForecast' do
     pod 'RealmSwift'
     pod 'Alamofire', '~> 4.7'
     pod 'ObjectMapper', '~> 3.1'
+    pod 'Charts'
 
     # Network
     pod 'ReachabilitySwift'
